--- a/index.html
+++ b/index.html
@@ -25,16 +25,13 @@
     
       <ul class="nav navbar-nav navbar-right" >
         <li style>
-        <a href="#" > 
-        <span class="glyphicon glyphicon-cutlery"></span> chicken</a>
+        <a href="#">Chicken</a>
         </li>
         <li>
-        <a href="#" >
-        <span class="glyphicon glyphicon-info-sign"></span> beef</a>
+        <a href="#">Beef</a>
         </li>
         <li>
-        <a href="#">
-        <span class="glyphicon glyphicon-certificate"></span> sushi</a>
+        <a href="#">Sushi</a>
         </li>
       </ul>
     </div>
